# scaling-octo-parakeet

./: Cargo.toml  README.md
src/: crdgen.rs
src/api/batch/v1/: cronjob.rs  mod.rs
yaml/: crds.yaml
